# snake_c

./: CMakeLists.txt  Makefile  main.c
cmake/: FindCheck.cmake
src/: CMakeLists.txt  main.c  queue.c  queue.h  snake.c  snake.h  utils.c  utils.h
test/: CMakeLists.txt  test_main.c  test_queue.c  test_snake.c
